// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToggleView renders RTL styling 1`] = `
<div
  className="c-chk is-rtl "
  data-garden-id="toggles.toggle_view"
  data-garden-version="version"
/>
`;

exports[`ToggleView renders default styling 1`] = `
<div
  className="c-chk "
  data-garden-id="toggles.toggle_view"
  data-garden-version="version"
/>
`;
